<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/category_uncategorized"
        android:id="@+id/id_menu_uncategorize"
        />
    <item
        android:icon="@drawable/ic_work_black_24dp"
        android:title="@string/category_work"
        android:id="@+id/id_menu_work"
        />
    <item
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/category_family"
        android:id="@+id/id_menu_family"
        />
    <item
        android:icon="@drawable/ic_school_black_24dp"
        android:title="@string/category_study"
        android:id="@+id/id_menu_study"
        />
    <item
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/category_personal"
        android:id="@+id/personal"
        />
</menu>